# chktex-rust

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
crates/chktex-cli/: Cargo.toml
crates/chktex-cli/src/: main.rs
crates/chktex-cli/tests/: cli.rs  oracle.rs
crates/chktex-core/: Cargo.toml
crates/chktex-core/src/: checker.rs  cli.rs  diagnostic.rs  lexer.rs  lib.rs  regex_engine.rs  resource.rs  session.rs
crates/chktex-wasm/: Cargo.toml
crates/chktex-wasm/src/: lib.rs
docs/: compatibility.md
examples/wasm/: WASM.release.md  example.release.html  index.html
integrations/browser/: chktex.d.ts  chktex.js  package.json
integrations/browser/test/: smoke.test.mjs
tools/: build-wasm.sh  cross-windows.sh  diff-warnings.sh  generate-upstream-config-fixtures.sh  oracle-env.sh  package-release.sh  package-wasm-release.sh  run-oracle-tests.sh  rustup.sh  setup-git-hooks.sh  setup-oracle.sh
