[package]
name = "chktex-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["regex-bytes"]
regex-bytes = ["dep:regex"]
fancy-regex = ["dep:fancy-regex"]

[dependencies]
fancy-regex = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
thiserror.workspace = true
